[package]
name = "gravity_game"
version = "0.1.0"
publish = false
authors = ["Matthew Billman <mgbvox@gmail.com>"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]


[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
[dependencies]
bevy = { version = "0.16.0" }
avian2d = "0.3.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_warn"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
anyhow = "1.0.98"

[build-dependencies]
embed-resource = "1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
uuid = { version = "1.13.1", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Window", "Document", "HtmlCanvasElement", "Event", "EventTarget"
] }


[profile.dev.package."*"]
opt-level = 3
codegen-units = 1


[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
